changed body to grid fixed overflowing todo list

--- a/style.css
+++ b/style.css
@@ -5,39 +5,39 @@
     --dark-gray: #1d1e1e;
     --light-gray: #2a2a2a;
     --lighter-gray: #7b7b7b;
+    --p: 16px/19px var(--font-family);
+    --h1: bold 32px/38px var(--font-family);
     color: white;
-    font: 16px/19px var(--font-family);
+    font: var(--p);
     height: 100%;
     margin: 0;
 }
 
 body {
     background-color: var(--dark-gray);
+    display: grid;
+    grid-template-rows: 2.375rem 2.812rem 1fr 3.688rem;
+    grid-template-columns: 1fr;
+    grid-template-areas: 'header'
+               'add-task'
+               'todo-list'
+               'bottom-container';
+    row-gap: 10px;
     height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
     margin: 10px 525px 10px;
     padding: 20px 10px;
     box-sizing: border-box;
     overflow: hidden;
 }
 
-.todo-section {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    /* TODO: scroll on overflow */
-    /* height: 100%;
-    overflow-y: scroll; */
-}
-
 h1 {
-    font: bold 32px/38px var(--font-family);
-    margin: 5px 0px;
+    grid-area: header;
+    font: var(--h1);
+    margin: 0px;
 }
 
 form {
+    grid-area: add-task;
     display: flex;
 }
 
@@ -52,18 +52,21 @@ form {
 }
 
 .todo-list {
-    list-style-type: none;
+    grid-area: todo-list;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .todo {
-    margin: 12px 0px;
+    margin: 0 0 12px;
     padding: 12px 23px;
     border: 1px solid var(--light-gray);
     border-style: solid none;
     transform: scale(1);
     transition: transform 100ms ease-in-out;
+    overflow-x: auto;
 }
 
 .todo label {
@@ -74,7 +77,7 @@ form {
 .custom-checkbox {
     --size: .80em;
     display: inline-block;
-    width: var(--size);
+    min-width: var(--size);
     height: var(--size);
     margin-right: var(--size);
     border: 1px solid var(--lighter-gray);
@@ -112,6 +115,7 @@ p {
 }
 
 .bottom-container {
+    grid-area: bottom-container;
     display: flex;
     justify-content: space-between;
     align-items: center;
